# terminal-chat

./: CMakeLists.txt  README.md  client.cpp  main.cpp  main_client.cpp  main_server.cpp
src/client/: ChatClient.cpp  ChatClient.h
src/common/: Commands.cpp  Commands.h  Constants.h  Utils.cpp  Utils.h  WinsockInitializer.cpp  WinsockInitializer.h
src/server/: ChatServer.cpp  ChatServer.h  ClientHandler.cpp  ClientHandler.h
